unpackaged/main/default/objects/OrderDeliveryGroupSummary/OrderDeliveryGroupSummary.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>