unpackaged/main/default/objects/OrderDeliveryGroupSummary/fields/CLICKCOLLECT_idStore__c.field-meta.xml
<CustomField>
    <fullName>CLICKCOLLECT_idStore__c</fullName>
    <label>Store Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>