unpackaged/main/default/objects/OrderDeliveryGroupSummary/fields/CLICKCOLLECT_isStore__c.field-meta.xml
<CustomField>
    <fullName>CLICKCOLLECT_isStore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Store</label>
    <type>Checkbox</type>
</CustomField>