unpackaged/main/default/objects/OrderDeliveryGroupSummary/fields/CLICKCOLLECT_pickup_lastName__c.field-meta.xml
<CustomField>
    <fullName>CLICKCOLLECT_pickup_lastName__c</fullName>
    <label>Pickup Information LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>