unpackaged/main/default/objects/OrderDeliveryGroupSummary/fields/CLICKCOLLECT_StoreName__c.field-meta.xml
<CustomField>
    <fullName>CLICKCOLLECT_StoreName__c</fullName>
    <label>Pickup Store Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>