unpackaged/main/default/objects/OrderDeliveryGroupSummary/fields/Complementary__c.field-meta.xml
<CustomField>
    <fullName>Complementary__c</fullName>
    <label>Complementary</label>
    <length>25</length>
    <type>Text</type>
</CustomField>