unpackaged/main/default/objects/OrderDeliveryGroupSummary/fields/STORE_OPENING_FR__c.field-meta.xml
<CustomField>
    <fullName>STORE_OPENING_FR__c</fullName>
    <label>Store Opening FR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>