unpackaged/main/default/objects/OrderDeliveryGroupSummary/fields/STORE_OPENING_MO__c.field-meta.xml
<CustomField>
    <fullName>STORE_OPENING_MO__c</fullName>
    <label>Store Opening MO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>