unpackaged/main/default/objects/OrderDeliveryGroupSummary/fields/TECH_PE_was_identified__c.field-meta.xml
<CustomField>
    <fullName>TECH_PE_was_identified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PE was identified</label>
    <type>Checkbox</type>
</CustomField>