unpackaged/main/default/objects/OrderDeliveryGroupSummary/fields/TECH_TaxId_Validation__c.field-meta.xml
<CustomField>
    <fullName>TECH_TaxId_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH TaxId Validation</label>
    <type>Checkbox</type>
</CustomField>