unpackaged/main/default/objects/OrderDeliveryGroupSummary/validationRules/Deliver_To_Country_ISO_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Deliver_To_Country_ISO_2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISBLANK(DeliverToCountry),
NOT(REGEX(DeliverToCountry, &quot;^[A-Z]{2}$&quot;))
),
$Profile.Name = &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>The value should be in Uppercase (2 characters)  and should not be empty.</errorMessage>
</ValidationRule>