unpackaged/main/default/objects/OrderDeliveryGroupSummary/validationRules/ShippingAddressCountryIsChanged.validationRule-meta.xml
<ValidationRule>
    <fullName>ShippingAddressCountryIsChanged</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(DeliverToCountry), $Profile.Name &lt;&gt; &apos;System Administrator&apos;, OR(PRIORVALUE(DeliverToCountry) &lt;&gt; &apos;&apos;,PRIORVALUE(DeliverToCountry) &lt;&gt; null))</errorConditionFormula>
    <errorMessage>You don’t have rights to modify this field</errorMessage>
</ValidationRule>